backend subscription form

--- a/Tour_fifi_bike.html
+++ b/Tour_fifi_bike.html
@@ -37,7 +37,7 @@
 
     <img src="/Assets/fifi-on-bike.png" alt="" srcset="" width="100%" height="100%">
     <div class="meet-char" align="center">
-        <a href="./download.html"><span>Let's Go</span><br> meet our characters</a>
+        <a href="./characterSheet.html"><span>Let's Go</span><br> meet our characters</a>
     </div>
 
 </body>
