--- a/characterSheet.html
+++ b/characterSheet.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ToonLand - Charactersheet</title>
+    <title>ToonLand</title>
 
 
     <link rel="shortcut icon" href="./Assets/Logo2.png" type="image/x-icon" width="100%" height="100%">
@@ -43,18 +43,38 @@
     <!--================ Start Header Area =================-->
     <div class="container-fluid">
         <div class="row justify-content-md-center">
-            <div class="col-md-auto" align="center">
-                <div class="logo justify-content-center"><a href="index.html"> <img src="Assets/Logo.png" alt=""
-                            srcset="" width="100%" height="100%"></a>
+            <div class="col-md-auto">
+                <div class="logo justify-content-center">
+                    <a href="index.html"> <img src="/Assets/Logo.png" alt="" srcset="" width="100%" height="100%"></a>
                 </div>
             </div>
         </div>
     </div>
     <!--================ End Header Area =================-->
 
+    <!--======== Start Meet our characters real ===========-->
+    <div class="container">
+        <div class="row row-cols-3" align="center">
+            <div class="col"><img src="/Assets/dummy-card.png" alt="" srcset=""></div>
+            <div class="col"><img src="/Assets/dummy-card.png" alt="" srcset=""></div>
+            <div class="col"><img src="/Assets/dummy-card.png" alt="" srcset=""></div>
+            <div class="col"><img src="/Assets/dummy-card.png" alt="" srcset=""></div>
+            <div class="col"><img src="/Assets/dummy-card.png" alt="" srcset=""></div>
+            <div class="col"><img src="/Assets/dummy-card.png" alt="" srcset=""></div>
+            <div class="col"><img src="/Assets/dummy-card.png" alt="" srcset=""></div>
+            <div class="col"><img src="/Assets/dummy-card.png" alt="" srcset=""></div>
+            <div class="col"><img src="/Assets/dummy-card.png" alt="" srcset=""></div>
+            <div class="col"><img src="/Assets/dummy-card.png" alt="" srcset=""></div>
+            <div class="col"><img src="/Assets/dummy-card.png" alt="" srcset=""></div>
+        </div>
+    </div>
+    <!--======== End Meet our characters real ===========-->
+
     <!--======== Start comic cards =========-->
-    <div class="container comic-card">
-        <div class="row mx-auto justify-content-center" align="center">
+    <div class="container comic-card" align="center">
+        <div class="row mx-auto justify-content-center">
+
+
             <div class="col">
                 <div class="card text-center border-0" style="width: 12rem;">
                     <img src="/Assets/comic-dummy-cover-page.png" class="card-img-top" alt="...">
@@ -92,8 +112,34 @@
             </div>
         </div>
     </div>
+    <!--======== Start comic cards =========-->
 
-
+    <!--========= Start related section ========= -->
+    <div class="container">
+        <div class="row row-cols-4">
+            <div class="col">
+                <a href="/Inner Pages/library.html">
+                    <img src="/Assets/library-card.png" alt="" srcset="">
+                </a>
+            </div>
+            <div class="col">
+                <a href="/Inner Pages/theatre.html">
+                    <img src="/Assets/theatre-card.png" alt="" srcset="">
+                </a>
+            </div>
+            <div class="col">
+                <a href="/Inner Pages/music.html">
+                    <img src="/Assets/music-card.png" alt="" srcset="">
+                </a>
+            </div>
+            <!-- <div class="col">
+                <a href="/download.html">
+                    <img src="/Assets/character-card.png" alt="" srcset="">
+                </a>
+            </div> -->
+        </div>
+    </div>
+    <!--========= End related section ========= -->
 
     <!-- ========== Start Footer ============== -->
     <!-- <div class="footer">
