--- a/characterSheet.html
+++ b/characterSheet.html
@@ -42,7 +42,9 @@
 <body onload="myFunction()" style="margin:0; padding: 0;">
     <!--============ Start Preloader ==============-->
 
-
+    <button onclick="history.go(-1)" class="back-button">
+        <img src="/Assets/Asset 6-8.png" alt="" srcset="" width="100%" height="100%">
+    </button>
     <div id="loader">
         <video autoplay muted>
             <source src="/Assets/Untitled video - Made with Clipchamp.mp4" type="video/mp4">
