--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 </head>
 
 <body>
-
+    <button onclick="history.go(-1)" class="back-button">
+        <img src="/Assets/Asset 6-8.png" alt="" srcset="" width="100%" height="100%">
+    </button>
 
     <!--================ Start Header Area =================-->
     <!-- <div class="container-fluid">
