--- a/Inner Pages/Comic.html
+++ b/Inner Pages/Comic.html
@@ -49,7 +49,9 @@
         </div>
     </div> -->
     <!--================ End Header Area =================-->
-
+    <button onclick="history.go(-1)" class="back-button">
+        <img src="/Assets/Asset 6-8.png" alt="" srcset="" width="100%" height="100%">
+    </button>
     <!--================ Start Comic landing page ============-->
     <div class="container">
         <div class="row">
