--- a/Inner Pages/library.html
+++ b/Inner Pages/library.html
@@ -40,6 +40,10 @@
 </head>
 
 <body>
+    <button onclick="history.go(-1)" class="back-button">
+        <img src="/Assets/Asset 6-8.png" alt="" srcset="" width="100%" height="100%">
+    </button>
+
     <!--================ Start Header Area =================-->
     <!-- <div class="container-fluid">
         <div class="row justify-content-md-center">
@@ -55,7 +59,7 @@
     <!-- ============== Start Landing Page ============ -->
     <div class="container-fluid">
         <div class="row library-img">
-            <img src="/Assets/library-landing-page.png" alt="" srcset="" width="100%" height="100%">
+            <img src="/Assets/Library.jpeg" alt="" srcset="" width="100%" height="100%">
         </div>
     </div>
     <!-- ============== End Landing Page ============ -->
@@ -77,9 +81,9 @@
                 <img src="/Assets/knowledge card.png" alt="" srcset="" width="100%" height="auto">
             </div> -->
         </div>
-        <div class="row">
+        <!-- <div class="row">
             <img src="/Assets/Asset 7-8.png" alt="" srcset="">
-        </div>
+        </div> -->
     </div>
     <!--============= End Pricing Section ============= -->
 
