meet our characters

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     <!-- ===========Start Take a tour ===========-->
     <div class="container" align="center">
         <div class="col tour-button " align="center">
-            <a href="/characterSheet.html"><img src="/Assets/take-a-tour-buttonv2.png" alt="" srcset="" width="100%"
+            <a href="/meetOurCharacters.html"><img src="/Assets/take-a-tour-buttonv2.png" alt="" srcset="" width="100%"
                     height="100%">
                 <p class="ct-animate-blink" align="center">
                     Take a tour
