--- a/subscriptionForm.html
+++ b/subscriptionForm.html
@@ -50,7 +50,7 @@
         <div class="row justify-content-md-center">
             <div class="col-md-auto">
                 <div class="logo justify-content-center">
-                    <a href="index.html"> <img src="Assets/Logo.png" alt="" srcset="" width="100%" height="100%"></a>
+                    <!-- <a href="index.html"> <img src="Assets/Logo.png" alt="" srcset="" width="100%" height="100%"></a> -->
 
                 </div>
             </div>
@@ -90,7 +90,7 @@
 
         <div class="title">Subscribe ToonLand</div>
         <div class="content">
-            <form action="./download.html" id="myform" s>
+            <form action="./authenticatedMeetOurCharacter.html" id="myform" s>
                 <div class="user-details">
                     <div class="input-box">
                         <span class="details" id="name">Full Name</span>
@@ -105,7 +105,6 @@
                         <span class="details">Phone Number</span>
                         <input type="tel" id="contactNo" placeholder="Enter your number" required>
                     </div>
-
                 </div>
 
                 <div class="button">
