back button added

--- a/meetOurCharacters.html
+++ b/meetOurCharacters.html
@@ -27,10 +27,14 @@
 
     <!-- stylesheets -->
     <link rel="stylesheet" href="./css/meetOurCharacters.css">
+    <link rel="stylesheet" href="./css/header.css">
 
 </head>
 
 <body>
+    <button onclick="history.go(-1)" class="back-button">
+        <img src="/Assets/Asset 6-8.png" alt="" srcset="" width="100%" height="100%">
+    </button>
     <!--=========== Start Background container ===============-->
 
     <div class="background">
