--- a/authenticatedMeetOurCharacter.html
+++ b/authenticatedMeetOurCharacter.html
@@ -31,6 +31,9 @@
 </head>
 
 <body>
+    <button onclick="history.go(-1)" class="back-button">
+        <img src="/Assets/Asset 6-8.png" alt="" srcset="" width="100%" height="100%">
+    </button>
     <!--=========== Start Background container ===============-->
 
     <div class="background">
