--- a/meetOurCharacters.html
+++ b/meetOurCharacters.html
@@ -28,6 +28,7 @@
     <!-- stylesheets -->
     <link rel="stylesheet" href="./css/meetOurCharacters.css">
     <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/sidebar.css">
 
 </head>
 
@@ -38,11 +39,42 @@
     <!--=========== Start Background container ===============-->
 
     <div class="background">
-        <img src="/Assets/Asset 21-8.png" alt="" srcset="" width="100%">
+        <img src="/Assets/bg-3-8.png" alt="" srcset="" width="100%">
     </div>
 
 
     <!--=========== End Background container ===============-->
+
+    <!--========= Start Header logo ========= -->
+
+    <div style="position: absolute; width: 100%; height: 10%; top: 2.5rem;" align="center">
+        <a href="./index.html">
+            <img src="./Assets/typography_toonland.png" alt="" srcset="" width="20%"></a>
+    </div>
+    <!--========= End Header logo ========= -->
+
+    <!--========== Start Sidebar ==========-->
+    <div class="s-soft" id="right">
+        <a href="/" class="s-item facebook">
+            <!-- <span class="fa fa-facebook"></span> -->
+            <img src="/Assets/facebook.png" alt="" srcset="" width="100%" height="100%">
+        </a>
+        <a href="/" class="s-item twitter">
+            <!-- <span class="fa fa-twitter"></span> -->
+            <img src="/Assets/youtube.png" alt="" srcset="" width="100%" height="100%">
+        </a>
+        <a href="/" class="s-item linkedin">
+            <!-- <span class="fa fa-linkedin"></span> -->
+            <img src="/Assets/linkdin.png" alt="" srcset="" width="100%" height="100%">
+        </a>
+        <a href="/" class="s-item instagram">
+            <!-- <span class="fa fa-instagram"></span> -->
+            <img src="/Assets/whatsapp.png" alt="" srcset="" width="100%" height="100%">
+        </a>
+    </div>
+
+    <!--====== End Sidebar ========-->
+
     <!-- start cards -->
     <div class="container cards">
         <div class="row">
@@ -127,31 +159,31 @@
     <!-- end cards -->
 
     <!-- Start Connected pages -->
-    <div class="container" style="padding-top: 4rem;">
+    <div class="container" style="padding-top: 6rem; width: 100%;">
         <div class="row justify-content-md-center">
             <div class="col">
                 <a href="./Inner Pages/music.html">
-                    <img src="./Assets/music-card.png" alt="" srcset="" width="100%">
+                    <img src="./Assets/music-card.png" alt="" srcset="" width="120%">
                 </a>
             </div>
             <div class="col">
                 <a href="./Inner Pages/library.html">
-                    <img src="./Assets/library-card.png" alt="" srcset="" width="100%">
+                    <img src="./Assets/library-card.png" alt="" srcset="" width="120%">
                 </a>
             </div>
             <div class="col">
                 <a href="./Inner Pages/theatre.html">
-                    <img src="./Assets/theatre-card.png" alt="" srcset="" width="100%">
+                    <img src="./Assets/theatre-card.png" alt="" srcset="" width="120%">
                 </a>
             </div>
             <div class="col">
                 <a href="./Inner Pages/Comic.html">
-                    <img src="./Assets/comic-card.png" alt="" srcset="" width="100%">
+                    <img src="./Assets/comic-card.png" alt="" srcset="" width="120%">
                 </a>
             </div>
             <div class="col">
                 <a href="./Inner Pages/quiz.html">
-                    <img src="./Assets/quiz-card.png" alt="" srcset="" width="100%">
+                    <img src="./Assets/quiz-card.png" alt="" srcset="" width="120%">
                 </a>
             </div>
         </div>
