Modified with corrections
Quizes
inter linked pages
cards added

--- a/Inner Pages/music.html
+++ b/Inner Pages/music.html
@@ -93,33 +93,42 @@
 
     <!--============= End Music Player ===============-->
 
-
-    <!--========= Start related section ========= -->
-    <div class="container">
-        <div class="row row-cols-4">
+    <!-- Start Connected pages -->
+    <div class="container" style="padding-top: 6rem; width: 100%;">
+        <div class="row mx-auto justify-content-md-center">
+            <!-- <div class="col">
+                <a href="./Inner Pages/music.html">
+                    <img src="/Assets/music-card.png" alt="" srcset="" width="120%">
+                </a>
+            </div> -->
             <div class="col">
                 <a href="/Inner Pages/library.html">
-                    <img src="/Assets/library-card.png" alt="" srcset="">
+                    <img src="/Assets/library-card.png" alt="" srcset="" width="120%">
                 </a>
             </div>
             <div class="col">
                 <a href="/Inner Pages/theatre.html">
-                    <img src="/Assets/theatre-card.png" alt="" srcset="">
+                    <img src="/Assets/theatre-card.png" alt="" srcset="" width="120%">
                 </a>
             </div>
-            <!-- <div class="col">
-                <a href="/Inner Pages/music.html">
-                    <img src="/Assets/music-card.png" alt="" srcset="">
-                </a>
-            </div> -->
             <div class="col">
-                <a href="/download.html">
-                    <img src="/Assets/character-card.png" alt="" srcset="">
+                <a href="/Inner Pages/Comic.html">
+                    <img src="/Assets/comic-card.png" alt="" srcset="" width="120%">
+                </a>
+            </div>
+            <div class="col">
+                <a href="/Inner Pages/quizes/quiz.html">
+                    <img src="/Assets/quiz-card.png" alt="" srcset="" width="120%">
+                </a>
+            </div>
+            <div class="col">
+                <a href="/meetOurCharacters.html">
+                    <img src="/Assets/character-card.png" alt="" srcset="" width="120%">
                 </a>
             </div>
         </div>
     </div>
-    <!--========= End related section ========= -->
+    <!-- End Connected pages -->
 
     <!-- Scripts -->
     <script src="/scripts/music.js"></script>
