--- a/meetOurCharacters.html
+++ b/meetOurCharacters.html
@@ -39,9 +39,8 @@
     <!--=========== Start Background container ===============-->
 
     <div class="background">
-        <img src="/Assets/bg-3-8.png" alt="" srcset="" width="100%">
+        <img src="/Assets/bg.png" alt="" srcset="" width="100%">
     </div>
-
 
     <!--=========== End Background container ===============-->
 
@@ -50,6 +49,13 @@
     <div style="position: absolute; width: 100%; height: 10%; top: 2.5rem;" align="center">
         <a href="./index.html">
             <img src="./Assets/typography_toonland.png" alt="" srcset="" width="20%"></a>
+    </div>
+    <!--========= End Header logo ========= -->
+
+    <!--========= Start Header logo ========= -->
+
+    <div style="position: absolute; width: 100%; height: 10%; top:20rem;" align="center">
+        <img src="./Assets/typo-meet-8.png" alt="" srcset="" width="20%">
     </div>
     <!--========= End Header logo ========= -->
 
@@ -79,43 +85,44 @@
     <div class="container cards">
         <div class="row">
             <div class="col">
-                <img src="./Assets/fifi-card-8.png" alt="" srcset="" width="100%">
+                <img src="./Assets/character_cards/character cards-09.png" alt="" srcset="" width="75%">
             </div>
             <div class="col justify-content-center" style="padding-top: 10rem; padding-left: 3rem;">
                 <!-- <img src="./Assets/typo-meet-8.png" alt="" srcset=""> -->
             </div>
             <div class="col">
-                <img src="./Assets/tubby-card-8.png" alt="" srcset="" style="float: right;" width="100%">
+                <img src="./Assets/character_cards/character cards-10.png" alt="" srcset="" style="float: right;"
+                    width="75%">
             </div>
         </div>
 
-        <div class="row">
+        <div class="row" style="padding-top: 2rem;">
             <div class="col">
-                <img src="./Assets/lulu-card-8.png" alt="" srcset="" width="100%">
+                <img src="./Assets/character_cards/character cards-11.png" alt="" srcset="" width="100%">
             </div>
             <div class="col">
-                <img src="./Assets/toto-card-8.png" alt="" srcset="" width="100%">
+                <img src="./Assets/character_cards/character cards-12.png" alt="" srcset="" width="100%">
             </div>
             <div class="col">
-                <img src="./Assets/kuma-card-8.png" alt="" srcset="" width="100%">
+                <img src="./Assets/character_cards/character cards-13.png" alt="" srcset="" width="100%">
             </div>
             <div class="col">
-                <img src="./Assets/rio-card-8.png" alt="" srcset="" width="100%">
+                <img src="./Assets/character_cards/character cards-14.png" alt="" srcset="" width="100%">
             </div>
         </div>
 
-        <div class="row">
+        <div class="row" style="padding-top: 2rem;">
             <div class="col">
-                <img src="./Assets/nala-card-8.png" alt="" srcset="" width="100%">
+                <img src="./Assets/character_cards/character cards-15.png" alt="" srcset="" width="100%">
             </div>
             <div class="col">
-                <img src="./Assets/stella-bella-card-8.png" alt="" srcset="" width="100%">
+                <img src="./Assets/character_cards/character cards-16.png" alt="" srcset="" width="100%">
             </div>
             <div class="col">
-                <img src="./Assets/nubby-card-8.png" alt="" srcset="" width="100%">
+                <img src="./Assets/character_cards/character cards-17.png" alt="" srcset="" width="100%">
             </div>
             <div class="col">
-                <img src="./Assets/nugeena-card-8.png" alt="" srcset="" width="100%">
+                <img src="./Assets/character_cards/character cards-18.png" alt="" srcset="" width="100%">
             </div>
         </div>
         <div class="row">
@@ -182,7 +189,7 @@
                 </a>
             </div>
             <div class="col">
-                <a href="./Inner Pages/quiz.html">
+                <a href="./Inner Pages/quizes/quiz.html">
                     <img src="./Assets/quiz-card.png" alt="" srcset="" width="120%">
                 </a>
             </div>
